--- a/front/css/cart.css
+++ b/front/css/cart.css
@@ -153,10 +153,13 @@ h2 {
 	margin-top: 40px;
 }
 
-.cart__order__form__submit input:hover {
+.cart__order__form__submit input:hover:not([disabled]) {
 	box-shadow: rgb(42 18 206 / 90%) 0 0 22px 6px;
 }
 
+.cart__order__form__submit input:disabled{
+	background-color: #767676;
+}
 
 
 /***************/
